--- a/Mission2/Views/Shared/_Layout.cshtml
+++ b/Mission2/Views/Shared/_Layout.cshtml
@@ -13,6 +13,10 @@
 
 </head>
 <body>
+    <nav>
+        <a asp-controller="Good" asp-action="Index">Home</a>
+        <a asp-controller="Good" asp-action="GradeCalculator">Grade Calculator</a>
+    </nav>
     <div>
         @RenderBody()
     </div>
