--- a/Mission2/Views/Shared/_Layout.cshtml
+++ b/Mission2/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
     <title>@ViewBag.Title</title>
     <link href="lib/bootstrap/css/bootstrap.css" rel="stylesheet" />
     <link href="css/myown.css" rel="stylesheet" />
+    <script src="js/GradeCalculator.js"></script>
 
 </head>
 <body>
@@ -18,6 +19,7 @@
         <a asp-controller="Good" asp-action="GradeCalculator">Grade Calculator</a>
     </nav>
     <div>
+        <script src="js/GradeCalculator.js"></script>
         @RenderBody()
     </div>
 
